test/pass/generics/flat_generic_default_check.lly
[1, 1.1].@(list[any]).push("10")
