test/fail/basic_syntax/cast_with_subtypes.lly
#[
SyntaxError: Casts from 'any' cannot include subtypes.
    from cast_with_subtypes.lly:7
]#

var v: any = 10
v.@(list[integer])
